# orka

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MILESTONE-0.md  MILESTONE-1.md  MILESTONE-2.md  MILESTONE-3.md  MILESTONE-5-gui.md  MILESTONE-6-7-consolidated.md  MILESTONE-6-performance.md  MILESTONE-8-logs.md  MILESTONE-FIXES.md  MILESTONE-GUI-3.2.md  MILESTONE-MAYBE_4.md  MILESTONE-OPS-3.1 copy.md  MILESTONE-OPS-3.1.md  README.md  SECURITY.md  milestone_cleanup.md  plan.md  repomix-output.txt  stuff.md
.github/workflows/: ci.yml  ops-smoke.yml  release.yml
assets/macos/: orka.icns
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/apply/: Cargo.toml
crates/apply/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: columns.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: atlas.rs  details.rs  lib.rs  model.rs  nav.rs  results.rs  util.rs  watch.rs
crates/gui/src/logs/: mod.rs  parser.rs
crates/gui/src/tasks/: describe.rs  edit.rs  exec.rs  graph.rs  logs.rs  mod.rs  ops.rs  search.rs  stats.rs  svc_logs.rs  watch_ctrl.rs
crates/gui/src/ui/: actions.rs  dock.rs  init.rs  mod.rs  palette.rs  shortcuts.rs  stats.rs  statusbar.rs  term.rs  toasts.rs  topbar.rs  updates.rs  windows.rs
crates/gui/src/util/: highlight.rs
crates/kubehub/: Cargo.toml
crates/kubehub/src/: lib.rs
crates/ops/: Cargo.toml
crates/ops/src/: lib.rs
crates/persist/: Cargo.toml
crates/persist/src/: lib.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/search/: Cargo.toml
crates/search/examples/: bench.rs
crates/search/src/: lib.rs
crates/search/tests/: multigvk_determinism.rs  replay.rs  shards.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/tests/: multigvk_replay.rs  replay.rs  sharded_determinism.rs
docs/: ALPHA-README.md  architecture.md  config.md  gui-refactor.md  imperative_ops.md  installation.md  ops.md  orka_api.md  overview.md  troubleshooting.md  usage-cli.md  usage-gui.md
docs/plan/: milestone_alpha.md  milestone_atlas.md
docs/plan/archive/: MILESTONE-2.md  MILESTONE-7-mini-ui-perf.md  MILESTONE-8-logs.md  MILESTONE-API.md  milestone_cleanup.md
examples/: configmap.yaml
scripts/: kind-nightly.sh  kind-ops-smoke.sh
