[workspace]
members = [
    "crates/core",
    "crates/kubehub",
    "crates/store",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1"
rustc-hash = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Kube stack (exact version can be adjusted later)
kube = { version = "0.90", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.21", features = ["latest"] }
