[package]
name = "orkactl"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Orka CLI (Milestone 0)"

[dependencies]
orka-core = { path = "../core" }
orka-store = { path = "../store" }
orka-kubehub = { path = "../kubehub" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[[bin]]
name = "orkactl"
path = "src/main.rs"
