[package]
name = "orkactl"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Orka CLI (Milestone 0)"

[dependencies]
orka-core = { path = "../core" }
orka-store = { path = "../store" }
orka-kubehub = { path = "../kubehub" }
orka-schema = { path = "../schema" }
orka-search = { path = "../search" }
orka-apply = { path = "../apply" }
orka-persist = { path = "../persist" }
orka_ops = { path = "../ops" }
orka_api = { path = "../api" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
kube = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

[[bin]]
name = "orkactl"
path = "src/main.rs"

[features]
default = []
# Enable CRD JSONSchema validation path in CLI via orka-schema feature
validate = ["orka-schema/jsonschema-validate"]
