[package]
name = "orka-core"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Orka core types and errors (Milestone 0)"

[features]
default = ["strip-managed-fields"]
strip-managed-fields = []
persist-sqlite = [] # stubbed for later milestones

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

