[package]
name = "orka_gui"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Orka GUI (eframe/egui)"

[lib]
name = "orka_gui"
path = "src/lib.rs"

[dependencies]
orka_api = { path = "../api" }
orka-core = { path = "../core" }
orka-kubehub = { path = "../kubehub" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
egui_table = "0.4"
egui = "0.32"
eframe = { version = "0.32", default-features = true, features = ["wgpu"] }
egui_dock = { version = "0.17", optional = true }
egui_virtual_list = { version = "0.3", optional = true }
once_cell = "1.19"
fuzzy-matcher = "0.3"
regex = { workspace = true }
syntect = "5"
metrics = { workspace = true }
uuid = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
egui_term = { git = "https://github.com/Harzu/egui_term", branch = "main", optional = true }
vte = "0.13"
shell-escape = "0.1"
rfd = "0.14"
base64 = "0.22"

[features]
default = ["dock"]
dock = ["dep:egui_dock"]
virtual_list = ["dep:egui_virtual_list"]
term = ["dep:egui_term"]

# GUI stack deps are now in [dependencies]
