[package]
name = "orka-kubehub"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Orka kube integration (Milestone 0)"

[dependencies]
orka-core = { path = "../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }
once_cell = "1"
smallvec = "1"
